After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765957 - inspect: feature leak
inspect: feature leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal minor
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-04 06:52 UTC by Guillaume Desmottes
Modified: 2016-05-04 07:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
inspect: fix feature leak (790 bytes, patch)
2016-05-04 06:52 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-04 06:52:23 UTC
.
Comment 1 Guillaume Desmottes 2016-05-04 06:52:45 UTC
Created attachment 327265 [details] [review]
inspect: fix feature leak
Comment 2 Sebastian Dröge (slomo) 2016-05-04 07:09:56 UTC
Attachment 327265 [details] pushed as 4fe32b9 - inspect: fix feature leak