inspect: fix feature leak

https://bugzilla.gnome.org/show_bug.cgi?id=765957